Update CSRs as of 6/3/2015 1) Patch NIC, USBH, and SATA to workaround enum changes that break the scripts 2) Add lots of new register attributes of the week 3) AP sysregs are included, but not hooked up in the BDK 4) BDK includes CSRs for t88 pass 1.1 and pass 2.0 5) Although the pass 2.0 CSRs are here, the BDK doesn't support pass 2.0 yet
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@118894 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/csr-tool/Makefile
+++ b/csr-tool/Makefile
@@ -6,14 +6,17 @@ all: fetch generate copy-headers
 .PHONY: fetch
 fetch: clean
 	svn export -q ${SVNROOT}/t88/trunk/hwcode/regs/gen cn88xx
+	patch -p0 -i t88-nic.patch
+	patch -p0 -i t88-sata.patch
+	patch -p0 -i t88-usbh.patch
 
 .PHONY: generate
 generate:
 	rm -rf html output
 	mkdir html output
 	./csr-tool.py --html \
-	    --csr cn88xxp1,cn88xx,t88=1.0 \
-	    --csr cn88xx,cn88xx,t88=1.1
+	    --csr cn88xxp1,cn88xx,t88=1.1 \
+	    --csr cn88xx,cn88xx,t88=2.0
 
 .PHONY: copy-headers
 copy-headers:
