[FatFs] Add FatFs to the build.  - Add FatFs main include (ff.h) to list of bdk includes.  - Add FatFs code to libbdk Makefile.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120326 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -4,6 +4,7 @@ include bdk.mk
 # These are the directories where source files are found
 #
 dirs  = libbdk-arch
+dirs += libbdk-fatfs
 dirs += libbdk-hal
 dirs += libbdk-hal/if
 dirs += libbdk-hal/qlm
