Do rm -rf to delete tmp directory.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120342 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -78,7 +78,7 @@ $(BDK_ROOT)/libbdk/bdk.d: $(BDK_ROOT)/libbdk/bdk.h
 # Clean targets
 #
 clean:
-	rm -f $(BDK_ROOT)/libbdk/libbdk.a $(objs) tmp bdk-functions.c bdk-functions.o
+	rm -rf $(BDK_ROOT)/libbdk/libbdk.a $(objs) tmp bdk-functions.c bdk-functions.o
 distclean: clean
 	rm -f $(deps) bdk.pch
 
