[chainboot] Add partition table to image.
This is a static partition table supporting the current setup:
  - 16MB device
  - FAT partition located at 0x280000-0x300000 (512kB size)

git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120345 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/chainboot/Makefile
+++ b/chainboot/Makefile
@@ -33,7 +33,7 @@ stage2.bin: diagnostics.bin lua/*
 ${IMAGE_NAME}.bin: stage0.bin stage1.bin stage2.bin
 	#
 	# 1) 0x000000: 64KB unused by Thunder
-	cat /dev/zero | head -q -c 65536 > ${IMAGE_NAME}.bin
+	cat ptable-16MB-0x280000-0x300000-512k.img /dev/zero | head -q -c 65536 > ${IMAGE_NAME}.bin
 	# 2) 0x010000: 64KB of CVM_CLIB header
 	echo -n CVM_CLIB | cat - /dev/zero | head -q -c 65536 >> ${IMAGE_NAME}.bin
 	# 3) 0x020000: 192KB of chainloader image (non-trusted)
