[chainboot] Change build to create FAT fs only boot image:   - Create 2.5MB FAT filesystem   - Place FAT fs @ 0x080000   - Move stage1.bin and stage2.bin into FAT fs   - Stage 1 and 2 images will now be loaded from FAT
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120360 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/chainboot/Makefile
+++ b/chainboot/Makefile
@@ -19,30 +19,34 @@ stage0.bin: chainloader.bin
 
 # BDK image
 stage1.bin: boot-stub.bin
-	if [ `stat -c %s $^` -gt 524288 ]; then echo "ERROR: $^ image must be 512KB or less";exit 1;fi
 	${BDK_ROOT}/bin/bdk-update-romfs stage1.bin boot-stub.bin
 
 # Diagnostics image
 stage2.bin: diagnostics.bin lua/*
 	${BDK_ROOT}/bin/bdk-update-romfs stage2.bin diagnostics.bin lua/*
 
-${IMAGE_NAME}.bin: stage0.bin stage1.bin stage2.bin
+fatfs.bin: stage1.bin stage2.bin
+	# Create empty 2.5MB image file
+	dd if=/dev/zero of=fatfs.bin bs=1k count=2560 status=none
+	# Create FAT filesystem in image file
+	${BDK_ROOT}/bin/fatfs-tool -i fatfs.bin mkfs
+	# Copy stage 1 & 2 images into FAT filesystem
+	${BDK_ROOT}/bin/fatfs-tool -i fatfs.bin put stage1.bin
+	${BDK_ROOT}/bin/fatfs-tool -i fatfs.bin put stage2.bin
+
+${IMAGE_NAME}.bin: stage0.bin stage1.bin stage2.bin fatfs.bin
 	#
 	# 1) 0x000000: 64KB unused by Thunder
-	cat ptable-16MB-0x280000-0x300000-512k.img /dev/zero | head -q -c 65536 > ${IMAGE_NAME}.bin
+	cat ptable-16MB-0x080000-0x300000-2.5M.img /dev/zero | head -q -c 65536 > ${IMAGE_NAME}.bin
 	# 2) 0x010000: 64KB of CVM_CLIB header
 	echo -n CVM_CLIB | cat - /dev/zero | head -q -c 65536 >> ${IMAGE_NAME}.bin
 	# 3) 0x020000: 192KB of chainloader image (non-trusted)
 	cat stage0.bin /dev/zero | head -q -c 196608 >> ${IMAGE_NAME}.bin
 	# 4) 0x050000: 192KB of chainloader image (trusted)
 	cat stage0.bin /dev/zero | head -q -c 196608 >> ${IMAGE_NAME}.bin
-	# 5) 0x080000: 512k of BDK image
-	cat stage1.bin /dev/zero | head -q -c 524288 >> ${IMAGE_NAME}.bin
-	# 6) 0x100000: 1.5MB of diagnostics
-	cat stage2.bin /dev/zero | head -q -c 1572864 >> ${IMAGE_NAME}.bin
-	# 7) 0x280000: 512k of FAT filesystem image
-	gunzip -c fat-512k.img.gz >> ${IMAGE_NAME}.bin
-	# 8) 0x300000: Free space until 0x400000
+	# 5) 0x080000: 2.5MB FAT filesystem
+	cat fatfs.bin /dev/zero | head -q -c 2621440 >> ${IMAGE_NAME}.bin
+	# 6) 0x300000: Free space until 0x400000
 	# You need to install ATF starting at 0x400000
 
 chainloader: chainloader.o $(BDK_ROOT)/libbdk/libbdk.a
