[util] Add long filename support to fatfs-tool.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120367 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/utils/fatfs-tool/Makefile
+++ b/utils/fatfs-tool/Makefile
@@ -12,6 +12,7 @@ CPP_LINK_FLAGS		= $(LIB_DIR) $(LIBS)
 OBJS =	main.o \
 		cmd.o \
 		$(FATFS_DIR)/src/ff.o \
+		$(FATFS_DIR)/src/option/unicode.o \
 		$(FATFS_DIR)/src/diskio.o \
 		$(FATFS_DIR)/src/diskio_img_file.o
 
