[chainboot] Don't add lua to ROM fs in diagnostics.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120372 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/chainboot/Makefile
+++ b/chainboot/Makefile
@@ -23,9 +23,9 @@ stage1.bin: boot-stub.bin
 
 # Diagnostics image
 stage2.bin: diagnostics.bin lua/*
-	${BDK_ROOT}/bin/bdk-update-romfs stage2.bin diagnostics.bin lua/*
+	cp diagnostics.bin stage2.bin
 
-fatfs.bin: stage1.bin stage2.bin
+fatfs.bin: stage1.bin stage2.bin lua/*
 	# Create empty 2.5MB image file
 	dd if=/dev/zero of=fatfs.bin bs=1k count=2560 status=none
 	# Create FAT filesystem in image file
