[brdcfg] Add default.cfg board config file to FATF fs.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120377 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/chainboot/Makefile
+++ b/chainboot/Makefile
@@ -37,6 +37,10 @@ fatfs.bin: stage1.bin stage2.bin lua/*
 	${BDK_ROOT}/bin/fatfs-tool -i fatfs.bin mkdir /lua
 	${BDK_ROOT}/bin/fatfs-tool -i fatfs.bin cp lua/*.lua /lua
 
+	# Test config file
+	${BDK_ROOT}/bin/fatfs-tool -i fatfs.bin cp default.cfg /
+
+
 ${IMAGE_NAME}.bin: stage0.bin stage1.bin stage2.bin fatfs.bin
 	#
 	# 1) 0x000000: 64KB unused by Thunder
