--- a/chainboot/default-crb-2s.cfg
+++ b/chainboot/default-crb-2s.cfg
@@ -1,20 +1,20 @@
 QLM.MODE=QLM_MODE_SKIP
 QLM.FREQ=0
 
-QLM.MODE.N0.I0=QLM_MODE_XFI_4X1
-QLM.MODE.N0.I1=QLM_MODE_XLAUI_1X4
-QLM.MODE.N0.I2=QLM_MODE_PCIE_1X4
-QLM.MODE.N0.I3=QLM_MODE_SATA_4X1
-QLM.MODE.N0.I4=QLM_MODE_PCIE_1X8
-QLM.MODE.N0.I6=QLM_MODE_PCIE_1X8
-QLM.FREQ.N0.I0=10312
-QLM.FREQ.N0.I1=10312
-QLM.FREQ.N0.I2=8000
-QLM.FREQ.N0.I3=6000
-QLM.FREQ.N0.I4=8000
-QLM.FREQ.N0.I6=6000
+QLM.MODE.N0.QLM0=QLM_MODE_XFI_4X1
+QLM.MODE.N0.QLM1=QLM_MODE_XLAUI_1X4
+QLM.MODE.N0.QLM2=QLM_MODE_PCIE_1X4
+QLM.MODE.N0.QLM3=QLM_MODE_SATA_4X1
+QLM.MODE.N0.QLM4=QLM_MODE_PCIE_1X8
+QLM.MODE.N0.QLM6=QLM_MODE_PCIE_1X8
+QLM.FREQ.N0.QLM0=10312
+QLM.FREQ.N0.QLM1=10312
+QLM.FREQ.N0.QLM2=8000
+QLM.FREQ.N0.QLM3=6000
+QLM.FREQ.N0.QLM4=8000
+QLM.FREQ.N0.QLM6=6000
 
-QLM.MODE.N1.I0=QLM_MODE_XFI_4X1
-QLM.MODE.N1.I3=QLM_MODE_SATA_4X1
-QLM.FREQ.N1.I0=1250
-QLM.FREQ.N1.I3=6000
+QLM.MODE.N1.QLM0=QLM_MODE_XFI_4X1
+QLM.MODE.N1.QLM3=QLM_MODE_SATA_4X1
+QLM.FREQ.N1.QLM0=1250
+QLM.FREQ.N1.QLM3=6000
