--- a/chainboot/default-crb-2s.cfg
+++ b/chainboot/default-crb-2s.cfg
@@ -1,3 +1,24 @@
+# Valid mode strings for QLM.MODE configuration:
+#
+#    QLM_MODE_DISABLED      /* QLM is disabled */
+#    QLM_MODE_PCIE_1X1      /* 1 PCIe, 1 lane. Other lanes unused */
+#    QLM_MODE_PCIE_2X1      /* 2 PCIe, 1 lane each */
+#    QLM_MODE_PCIE_1X2      /* 1 PCIe, 2 lanes */
+#    QLM_MODE_PCIE_1X4      /* 1 PCIe, 4 lanes */
+#    QLM_MODE_PCIE_1X8      /* 1 PCIe, 8 lanes */
+#
+#    QLM_MODE_SATA_4X1      /* SATA, each lane independent */
+#
+#    QLM_MODE_ILK           /* ILK 4 lanes */
+#    QLM_MODE_SGMII         /* SGMII, each lane independent */
+#    QLM_MODE_XAUI_1X4      /* 1 XAUI or DXAUI, 4 lanes */
+#    QLM_MODE_RXAUI_2X2     /* 2 RXAUI, 2 lanes each */
+#    QLM_MODE_OCI           /* OCI Multichip interconnect */
+#    QLM_MODE_XFI_4X1       /* 4 XFI, 1 lane each */
+#    QLM_MODE_XLAUI_1X4     /* 1 XLAUI, 4 lanes each */
+#    QLM_MODE_10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
+#    QLM_MODE_40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
+#    QLM_MODE_SKIP          /* Skip configuration of this QLM */
 QLM.MODE=QLM_MODE_SKIP
 QLM.FREQ=0
 
