--- a/chainboot/default-crb-2s.cfg
+++ b/chainboot/default-crb-2s.cfg
@@ -19,6 +19,14 @@
 #    QLM_MODE_10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
 #    QLM_MODE_40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
 #    QLM_MODE_SKIP          /* Skip configuration of this QLM */
+#
+# Valid modes for QLM.CLK configuration:
+#
+#    0      /* common clock 0 */
+#    1      /* common clock 1 */
+#    2      /* use external clock */
+#    3      /* skip clock configuration */
+#
 QLM.MODE=QLM_MODE_SKIP
 QLM.FREQ=0
 
@@ -39,3 +47,10 @@ QLM.MODE.N1.QLM0=QLM_MODE_XFI_4X1
 QLM.MODE.N1.QLM3=QLM_MODE_SATA_4X1
 QLM.FREQ.N1.QLM0=1250
 QLM.FREQ.N1.QLM3=6000
+
+QLM.CLK=3
+QLM.CLK.N0=0
+QLM.CLK.N0.QLM0=2
+QLM.CLK.N0.QLM1=2
+
+QLM.CLK.N1=2
