--- a/chainboot/default-crb-2s.cfg
+++ b/chainboot/default-crb-2s.cfg
@@ -1,24 +1,24 @@
 # Valid mode strings for QLM.MODE configuration:
 #
-#    QLM_MODE_DISABLED      /* QLM is disabled */
-#    QLM_MODE_PCIE_1X1      /* 1 PCIe, 1 lane. Other lanes unused */
-#    QLM_MODE_PCIE_2X1      /* 2 PCIe, 1 lane each */
-#    QLM_MODE_PCIE_1X2      /* 1 PCIe, 2 lanes */
-#    QLM_MODE_PCIE_1X4      /* 1 PCIe, 4 lanes */
-#    QLM_MODE_PCIE_1X8      /* 1 PCIe, 8 lanes */
+#    DISABLED      /* QLM is disabled */
+#    PCIE_1X1      /* 1 PCIe, 1 lane. Other lanes unused */
+#    PCIE_2X1      /* 2 PCIe, 1 lane each */
+#    PCIE_1X2      /* 1 PCIe, 2 lanes */
+#    PCIE_1X4      /* 1 PCIe, 4 lanes */
+#    PCIE_1X8      /* 1 PCIe, 8 lanes */
 #
-#    QLM_MODE_SATA_4X1      /* SATA, each lane independent */
+#    SATA_4X1      /* SATA, each lane independent */
 #
-#    QLM_MODE_ILK           /* ILK 4 lanes */
-#    QLM_MODE_SGMII         /* SGMII, each lane independent */
-#    QLM_MODE_XAUI_1X4      /* 1 XAUI or DXAUI, 4 lanes */
-#    QLM_MODE_RXAUI_2X2     /* 2 RXAUI, 2 lanes each */
-#    QLM_MODE_OCI           /* OCI Multichip interconnect */
-#    QLM_MODE_XFI_4X1       /* 4 XFI, 1 lane each */
-#    QLM_MODE_XLAUI_1X4     /* 1 XLAUI, 4 lanes each */
-#    QLM_MODE_10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
-#    QLM_MODE_40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
-#    QLM_MODE_SKIP          /* Skip configuration of this QLM */
+#    ILK           /* ILK 4 lanes */
+#    SGMII         /* SGMII, each lane independent */
+#    XAUI_1X4      /* 1 XAUI or DXAUI, 4 lanes */
+#    RXAUI_2X2     /* 2 RXAUI, 2 lanes each */
+#    OCI           /* OCI Multichip interconnect */
+#    XFI_4X1       /* 4 XFI, 1 lane each */
+#    XLAUI_1X4     /* 1 XLAUI, 4 lanes each */
+#    10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
+#    40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
+#    SKIP          /* Skip configuration of this QLM */
 #
 # Valid modes for QLM.CLK configuration:
 #
@@ -27,15 +27,15 @@
 #    2      /* use external clock */
 #    3      /* skip clock configuration */
 #
-QLM.MODE=QLM_MODE_SKIP
+QLM.MODE=SKIP
 QLM.FREQ=0
 
-QLM.MODE.N0.QLM0=QLM_MODE_XFI_4X1
-QLM.MODE.N0.QLM1=QLM_MODE_XLAUI_1X4
-QLM.MODE.N0.QLM2=QLM_MODE_PCIE_1X4
-QLM.MODE.N0.QLM3=QLM_MODE_SATA_4X1
-QLM.MODE.N0.QLM4=QLM_MODE_PCIE_1X8
-QLM.MODE.N0.QLM6=QLM_MODE_PCIE_1X8
+QLM.MODE.N0.QLM0=XFI_4X1
+QLM.MODE.N0.QLM1=XLAUI_1X4
+QLM.MODE.N0.QLM2=PCIE_1X4
+QLM.MODE.N0.QLM3=SATA_4X1
+QLM.MODE.N0.QLM4=PCIE_1X8
+QLM.MODE.N0.QLM6=PCIE_1X8
 QLM.FREQ.N0.QLM0=10312
 QLM.FREQ.N0.QLM1=10312
 QLM.FREQ.N0.QLM2=8000
@@ -43,8 +43,8 @@ QLM.FREQ.N0.QLM3=6000
 QLM.FREQ.N0.QLM4=8000
 QLM.FREQ.N0.QLM6=6000
 
-QLM.MODE.N1.QLM0=QLM_MODE_XFI_4X1
-QLM.MODE.N1.QLM3=QLM_MODE_SATA_4X1
+QLM.MODE.N1.QLM0=XFI_4X1
+QLM.MODE.N1.QLM3=SATA_4X1
 QLM.FREQ.N1.QLM0=1250
 QLM.FREQ.N1.QLM3=6000
 
