[brd] Remove lua dep on stage2.bin.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120417 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/chainboot/Makefile
+++ b/chainboot/Makefile
@@ -35,7 +35,7 @@ stage1.bin: boot-stub.bin
 	cp boot-stub.bin stage1.bin
 
 # Diagnostics image
-stage2.bin: diagnostics.bin lua/*
+stage2.bin: diagnostics.bin
 	cp diagnostics.bin stage2.bin
 
 ${IMAGE_NAME}.bin: stage0.bin stage1.bin stage2.bin
