--- a/normal-boot/board/crb-2s/default.cfg
+++ b/normal-boot/board/crb-2s/default.cfg
@@ -27,6 +27,8 @@
 #    2      /* use external clock */
 #    3      /* skip clock configuration */
 #
+BRD.CFG.BOARD=crb_2s
+
 QLM.MODE=SKIP
 QLM.FREQ=0
 
