--- a/normal-boot/board/ebb8804/default.cfg
+++ b/normal-boot/board/ebb8804/default.cfg
@@ -27,6 +27,8 @@
 #    2      /* use external clock */
 #    3      /* skip clock configuration */
 #
+BRD.CFG.BOARD=ebb8804
+
 QLM.MODE=SKIP
 QLM.FREQ=0
 QLM.CLK=3
