[brdcfg] Make DIAGS_GPIO configurable via config file.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120433 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -28,6 +28,10 @@
 #    3      /* skip clock configuration */
 #
 BRD.CFG.BOARD=crb_2s
+BRD.CFG.BMC_TWSI=1
+BRD.CFG.MULTI_NODE=1
+BRD.CFG.DIAGS_GPIO_VALUE=-1
+BRD.CFG.DIAGS_GPIO=0
 
 QLM.MODE=SKIP
 QLM.FREQ=0
@@ -59,6 +63,3 @@ QLM.CLK.N1=2
 
 DDR.SPEED.UDIMM=1066666666
 DDR.SPEED.RDIMM=940000000
-
-BRD.CFG.BMC_TWSI=1
-BRD.CFG.MULTI_NODE=1
