--- a/normal-boot/ebb8800/default.cfg
+++ b/normal-boot/ebb8800/default.cfg
@@ -28,6 +28,8 @@
 #    3      /* skip clock configuration */
 #
 BRD.CFG.BOARD=ebb8800
+BRD.CFG.DIAGS_GPIO_VALUE=-1
+BRD.CFG.DIAGS_GPIO=0
 
 QLM.MODE=SKIP
 QLM.FREQ=0
