--- a/normal-boot/crb-1s/default.cfg
+++ b/normal-boot/crb-1s/default.cfg
@@ -27,7 +27,11 @@
 #    2      /* use external clock */
 #    3      /* skip clock configuration */
 #
-BRD.CFG.BOARD=crb_2s
+BRD.CFG.BOARD=crb_1s
+BRD.CFG.BMC_TWSI=5
+BRD.CFG.MULTI_NODE=0
+BRD.CFG.DIAGS_GPIO_VALUE=-1
+BRD.CFG.DIAGS_GPIO=0
 
 QLM.MODE=SKIP
 QLM.FREQ=0
@@ -59,6 +63,3 @@ QLM.CLK.N1=2
 
 DDR.SPEED.UDIMM=1066666666
 DDR.SPEED.RDIMM=940000000
-
-BRD.CFG.BMC_TWSI=5
-BRD.CFG.MULTI_NODE=0
