[brdcfg] Make BGX enable configurable via config file.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120454 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -57,3 +57,7 @@ QLM.CLK.N1=2
 
 DDR.SPEED.UDIMM=1066666666
 DDR.SPEED.RDIMM=940000000
+
+BGX.ENABLE.N0.BGX0.P1=0
+BGX.ENABLE.N0.BGX0.P2=0
+BGX.ENABLE.N0.BGX0.P3=0
