[brdcfg][crb-2s] Make USB power gpio configurable via config file.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120457 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -30,6 +30,7 @@ BRD.CFG.BMC_TWSI=1
 BRD.CFG.MULTI_NODE=1
 BRD.CFG.DIAGS_GPIO_VALUE=-1
 BRD.CFG.DIAGS_GPIO=0
+BRD.CFG.USB_PWR_GPIO=38
 
 QLM.MODE.N0.QLM0=XFI_4X1
 QLM.MODE.N0.QLM1=XLAUI_1X4
