--- a/normal-boot/ebb8800/default.cfg
+++ b/normal-boot/ebb8800/default.cfg
@@ -31,3 +31,14 @@ BRD.CFG.DIAGS_GPIO=0
 
 BRD.CFG.BMC_TWSI=-1
 BRD.CFG.MULTI_NODE=0
+
+BRD.CFG.QLM_MODE_AUTO_CONFIG=1
+
+QLM.CLK.N0.QLM0=1
+QLM.CLK.N0.QLM1=1
+QLM.CLK.N0.QLM2=0
+QLM.CLK.N0.QLM3=0
+QLM.CLK.N0.QLM4=0
+QLM.CLK.N0.QLM5=0
+QLM.CLK.N0.QLM6=0
+QLM.CLK.N0.QLM7=0
