--- a/normal-boot/crb-1s/default.cfg
+++ b/normal-boot/crb-1s/default.cfg
@@ -30,6 +30,7 @@ BRD.CFG.BMC_TWSI=5
 BRD.CFG.MULTI_NODE=0
 BRD.CFG.DIAGS_GPIO_VALUE=-1
 BRD.CFG.DIAGS_GPIO=0
+BRD.CFG.WATCHDOG_TIMEOUT=8010
 
 QLM.MODE.N0.QLM0=XFI_4X1
 QLM.MODE.N0.QLM1=XLAUI_1X4
