--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -31,6 +31,7 @@ BRD.CFG.MULTI_NODE=1
 BRD.CFG.DIAGS_GPIO_VALUE=-1
 BRD.CFG.DIAGS_GPIO=0
 BRD.CFG.USB_PWR_GPIO=38
+BRD.CFG.WATCHDOG_TIMEOUT=8010
 
 QLM.MODE.N0.QLM0=XFI_4X1
 QLM.MODE.N0.QLM1=XLAUI_1X4
