[brdcfg] Make DRAM_NODEx configurable via config file.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120463 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -32,6 +32,8 @@ BRD.CFG.DIAGS_GPIO_VALUE=-1
 BRD.CFG.DIAGS_GPIO=0
 BRD.CFG.USB_PWR_GPIO=38
 BRD.CFG.WATCHDOG_TIMEOUT=8010
+BRD.CFG.DRAM.N0=cn88xx-crb-2s-V3
+BRD.CFG.DRAM.N1=cn88xx-crb-2s-V3
 
 QLM.MODE.N0.QLM0=XFI_4X1
 QLM.MODE.N0.QLM1=XLAUI_1X4
