--- a/normal-boot/ebb8804/default.cfg
+++ b/normal-boot/ebb8804/default.cfg
@@ -33,6 +33,8 @@ BRD.CFG.BMC_TWSI=-1
 BRD.CFG.MULTI_NODE=2
 
 BRD.CFG.QLM_MODE_AUTO_CONFIG=1
+BRD.CFG.DRAM.N0=ebb8804
+BRD.CFG.DRAM.N1=ebb8804
 
 QLM.CLK.N0.QLM0=1
 QLM.CLK.N0.QLM1=1
