[brdcfg] Eliminate per-board board.h and watchdog code. Move to common.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120464 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/Makefile
+++ b/normal-boot/Makefile
@@ -19,7 +19,7 @@ COMMON_OBJS	:= $(addsuffix .o, $(basename $(COMMON_SRC)))
 COMMON_OBJS := $(foreach o,$(COMMON_OBJS),$(BOARD_ROOT)/$(o))
 
 CFG_FILES  = $(BOARD_TYPE)/*.cfg
-HEADERS    = *.h $(BOARD_TYPE)/*.h
+HEADERS    = *.h
 
 FATFS_IMG  = $(BOARD_ROOT)/fatfs.bin
 STAGE0_BIN = $(BOARD_ROOT)/stage0.bin
