[brdcfg] Fix errors in default.cfg for crb-1/2s boards.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120465 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -46,11 +46,11 @@ QLM.FREQ.N0.QLM1=10312
 QLM.FREQ.N0.QLM2=8000
 QLM.FREQ.N0.QLM3=6000
 QLM.FREQ.N0.QLM4=8000
-QLM.FREQ.N0.QLM6=6000
+QLM.FREQ.N0.QLM6=8000
 
 QLM.MODE.N1.QLM0=XFI_4X1
 QLM.MODE.N1.QLM3=SATA_4X1
-QLM.FREQ.N1.QLM0=1250
+QLM.FREQ.N1.QLM0=10312
 QLM.FREQ.N1.QLM3=6000
 
 QLM.CLK.N0=0
@@ -65,3 +65,6 @@ DDR.SPEED.RDIMM=940000000
 BGX.ENABLE.N0.BGX0.P1=0
 BGX.ENABLE.N0.BGX0.P2=0
 BGX.ENABLE.N0.BGX0.P3=0
+BGX.ENABLE.N1.BGX0.P1=0
+BGX.ENABLE.N1.BGX0.P2=0
+BGX.ENABLE.N1.BGX0.P3=0
