[brdcfg][crb-2s] Make QLM tuning configurable via config file.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@120466 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -59,6 +59,58 @@ QLM.CLK.N0.QLM1=2
 
 QLM.CLK.N1=2
 
+QLM.TUNING.TX_SWING.N0.QLM3.LANE0=12
+QLM.TUNING.TX_SWING.N0.QLM3.LANE1=12
+QLM.TUNING.TX_SWING.N0.QLM3.LANE2=12
+QLM.TUNING.TX_SWING.N0.QLM3.LANE3=12
+QLM.TUNING.TX_SWING.N0.QLM6.LANE0=12
+QLM.TUNING.TX_SWING.N0.QLM6.LANE1=12
+QLM.TUNING.TX_SWING.N0.QLM6.LANE2=12
+QLM.TUNING.TX_SWING.N0.QLM6.LANE3=12
+QLM.TUNING.TX_SWING.N0.QLM7.LANE0=12
+QLM.TUNING.TX_SWING.N0.QLM7.LANE1=12
+QLM.TUNING.TX_SWING.N0.QLM7.LANE2=12
+QLM.TUNING.TX_SWING.N0.QLM7.LANE3=12
+
+QLM.TUNING.TX_PREMPTAP.N0.QLM3.LANE0=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM3.LANE1=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM3.LANE2=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM3.LANE3=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM6.LANE0=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM6.LANE1=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM6.LANE2=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM6.LANE3=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM7.LANE0=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM7.LANE1=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM7.LANE2=192
+QLM.TUNING.TX_PREMPTAP.N0.QLM7.LANE3=192
+
+QLM.TUNING.TX_SWING.N1.QLM3.LANE0=12
+QLM.TUNING.TX_SWING.N1.QLM3.LANE1=12
+QLM.TUNING.TX_SWING.N1.QLM3.LANE2=12
+QLM.TUNING.TX_SWING.N1.QLM3.LANE3=12
+QLM.TUNING.TX_SWING.N1.QLM6.LANE0=12
+QLM.TUNING.TX_SWING.N1.QLM6.LANE1=12
+QLM.TUNING.TX_SWING.N1.QLM6.LANE2=12
+QLM.TUNING.TX_SWING.N1.QLM6.LANE3=12
+QLM.TUNING.TX_SWING.N1.QLM7.LANE0=12
+QLM.TUNING.TX_SWING.N1.QLM7.LANE1=12
+QLM.TUNING.TX_SWING.N1.QLM7.LANE2=12
+QLM.TUNING.TX_SWING.N1.QLM7.LANE3=12
+
+QLM.TUNING.TX_PREMPTAP.N1.QLM3.LANE0=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM3.LANE1=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM3.LANE2=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM3.LANE3=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM6.LANE0=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM6.LANE1=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM6.LANE2=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM6.LANE3=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM7.LANE0=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM7.LANE1=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM7.LANE2=192
+QLM.TUNING.TX_PREMPTAP.N1.QLM7.LANE3=192
+
 DDR.SPEED.UDIMM=1066666666
 DDR.SPEED.RDIMM=940000000
 
