Create new CSR tool capable of handling both Octeon III and ThunderX. It uses output from csr3 maintained by the hardware team.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@122915 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ cscope.out
 /bdk.vtg
 /csr-tool/output
 /csr-tool/html
-/csr-tool/cn8?xx
+/csr-tool/yaml
 /libc/build
 /libc/share
 /libc/aarch64-thunderx-elf
