--- a/normal-boot/Makefile
+++ b/normal-boot/Makefile
@@ -57,41 +57,12 @@ $(STAGE1_BIN): $(BOOT_STUB_BIN)
 $(STAGE2_BIN): $(DIAGNOSTICS_BIN)
 	cp $(DIAGNOSTICS_BIN) $(STAGE2_BIN)
 
-$(FATFS_IMG): $(STAGE1_BIN) $(STAGE2_BIN) lua-common/* $(BOARD_ROOT)/lua/* $(CFG_FILES)
-	# Create empty 3.5MB image file
-	dd if=/dev/zero of=$(FATFS_IMG) bs=1k count=3584 2>/dev/null
-
-	# Create FAT filesystem in image file
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) mkfs
-
-	# Copy stage 1 & 2 images into FAT filesystem
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) cp $(STAGE1_BIN) /
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) cp $(STAGE2_BIN) /
-
-	# Add all the Lua files to the FAT fs
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) mkdir /lua
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) cp lua-common/*.lua /lua
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) cp $(BOARD_ROOT)/lua/*.lua /lua
-
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) cp $(BOARD_ROOT)/default.cfg /
-	@cp $(BOARD_ROOT)/default.cfg ./safe-mode.cfg
-	$(BDK_ROOT)/bin/fatfs-tool -q -i $(FATFS_IMG) cp ./safe-mode.cfg /
-	@rm ./safe-mode.cfg
-
-
-$(IMAGE_NAME).bin: $(STAGE0_BIN) $(STAGE1_BIN) $(STAGE2_BIN) $(FATFS_IMG)
-	#
-	# 1) 0x000000: 64KB unused by Thunder
-	cat ptable-16MB-0x080000-0x300000-2.5M.img /dev/zero | head -q -c 65536 > $(IMAGE_NAME).bin
-	# 2) 0x010000: 64KB of CVM_CLIB header
-	echo -n CVM_CLIB | cat - /dev/zero | head -q -c 65536 >> $(IMAGE_NAME).bin
-	# 3) 0x020000: 192KB of chainloader image (non-trusted)
-	cat $(STAGE0_BIN) /dev/zero | head -q -c 196608 >> $(IMAGE_NAME).bin
-	# 4) 0x050000: 192KB of chainloader image (trusted)
-	cat $(STAGE0_BIN) /dev/zero | head -q -c 196608 >> $(IMAGE_NAME).bin
-	# 5) 0x080000: 3.5MB FAT filesystem
-	cat $(FATFS_IMG) /dev/zero | head -q -c 3670016 >> $(IMAGE_NAME).bin
-	# You need to install ATF starting at 0x400000
+$(IMAGE_NAME).bin: $(STAGE0_BIN) $(STAGE1_BIN) $(STAGE2_BIN) lua-common/*.lua $(BOARD_ROOT)/lua/*.lua $(BOARD_ROOT)/default.cfg
+	cp $(BOARD_ROOT)/default.cfg safe-mode.cfg
+	$(BDK_ROOT)/bin/bdk-create-fatfs-image -o $@ \
+	    -0 $(STAGE0_BIN) -1 $(STAGE1_BIN) -2 $(STAGE2_BIN) \
+	    -l "lua-common/*.lua $(BOARD_ROOT)/lua/*.lua" -c "$(BOARD_ROOT)/default.cfg safe-mode.cfg"
+	rm safe-mode.cfg
 
 $(CHAINLOADER): $(BOARD_ROOT)/chainloader.o $(BOARD_ROOT)/boot-common.o $(BOARD_OBJS) $(BDK_ROOT)/libbdk/libbdk.a
 $(DIAGNOSTICS): $(BOARD_ROOT)/diagnostics.o $(BOARD_OBJS) $(BDK_ROOT)/libbdk/libbdk.a
