Port bdk-convert-pki-elf.py from Octeon in preparation of CN83XX's PKI. The microcode file target-bin/ipemainc.elf was built in the t83 tree and ends up in thunder-t83/t83/hwcode/ipeuc/obj/ipemainc.elf.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@123366 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -52,6 +52,18 @@ bdk-functions.c: ./create_function_table.py $(objs)
 	./create_function_table.py $@ $(objs)
 
 #
+# PKI needs microcode to function. The file bdk-microcode-cn8xxx.c is generated
+# from an ELF file maintained by the hardware team that contains this microcode.
+#
+ifeq (,$(findstring bdk-microcode-cn8xxx,$(src)))
+    # The wildcard will find it if the link is already there, otherwise
+    # we must add it
+    src += $(BDK_ROOT)/libbdk-hal/if/bdk-microcode-cn8xxx.c
+endif
+$(BDK_ROOT)/libbdk-hal/if/bdk-microcode-cn8xxx.c: $(BDK_ROOT)/target-bin/ipemainc.elf
+	$(BDK_ROOT)/bin/bdk-convert-pki-elf $^ $@
+
+#
 # These are needed to make bdk.pch
 # The -M creates the dependencies to stdout
 # The -MP creates fake target for .h files so make won't complain on include changes
