--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ cscope.out
 /docs/api-docs
 /docs/lua-modules
 /libbdk-arch/bdk-version.c
+/libbdk-hal/if/bdk-microcode-cn8xxx.c
 /libbdk/bdk-functions.c
 /libbdk/bdk-fs-rom-files.c
 /bdk-boot/boot-stub
