Adding SLT-BIST program within the BDK source
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125237 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -14,6 +14,7 @@ dirs += libbdk-lua
 dirs += libdram
 dirs += libdram/configs
 dirs += libfatfs
+dirs += libbdk-bist
 
 #
 # Create a list of all source files
