Create libbdk-boot, a library of functions to support boot-stub and other boot related images The reason for this is to fix issues where unused code is being pulled into images due to how the normal builds are setup. GCC include all code in an object file specified directly, but only include the used code when pulling from a library. This was causing the normal binaries to pull in much more code than expected, which sometimes affects the REQUIRE framework.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125396 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -15,6 +15,7 @@ dirs += libdram
 dirs += libdram/configs
 dirs += libfatfs
 dirs += libbdk-bist
+dirs += libbdk-boot
 
 #
 # Create a list of all source files
