Move watchdog support into libbdk-boot Length CRB-2S watchdog to 10s
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125399 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -31,7 +31,8 @@ BRD.CFG.MULTI_NODE=1
 BRD.CFG.DIAGS_GPIO_VALUE=-1
 BRD.CFG.DIAGS_GPIO=0
 BRD.CFG.USB_PWR_GPIO=38
-BRD.CFG.WATCHDOG_TIMEOUT=8010
+# Watchdog is in milliseconds
+BRD.CFG.WATCHDOG_TIMEOUT=10000
 BRD.CFG.DRAM.N0=cn88xx-crb-2s-V3
 BRD.CFG.DRAM.N1=cn88xx-crb-2s-V3
 
