Create libbdk-driver to contain all drivers supporting ECAM discovery
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125583 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -10,6 +10,7 @@ dirs += libbdk-hal/qlm
 dirs += libbdk-hal/device
 dirs += libbdk-os
 dirs += libbdk-dram
+dirs += libbdk-driver
 dirs += liblua
 dirs += libbdk-lua
 dirs += libdram
