Convert CRB-1S to use the new TWSI write config options
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125779 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-1s/default.cfg
+++ b/normal-boot/crb-1s/default.cfg
@@ -55,3 +55,33 @@ DDR.SPEED.RDIMM=933333333
 
 BGX.ENABLE.N0.BGX1.P2=0
 BGX.ENABLE.N0.BGX1.P3=0
+
+# TWSI write format:
+# node,twsi_id,dev_addr,internal_addr,num_bytes,ia_width_bytes,data
+# node = ThunderX node ID the twsi bus is on. -1 means the local node
+# twsi_id = ThunderX twsi bus to use
+# dev_addr = TWSI bus address
+# internal_addr = TWSI internal address, zero if not used
+# num_bytes = Number of bytes to write (1-8)
+# ia_width_bytes = Internal address width in bytes (0-2)
+# data = Data to write as a 64bit number
+#
+# Initialize IO expander U29 to set SFP_TX_DISABLE_0=0 and SFP_TX_DISABLE_1=0
+# Set all pins as inputs except:
+#     Pin 0.4: QSFP_RST_N
+#     Pin 0.5: QSFP_MODSEL_N
+#     Pin 0.6: QSFP_LPMODE
+#     Pin 1.3: SFP_TX_DISABLE_0
+#     Pin 1.7: SFP_TX_DISABLE_1
+#     Data high means pin is input
+BRD-CFG-TWSI-WRITE-0=-1,0,0x20,0x6,1,1,0x8f
+BRD-CFG-TWSI-WRITE-1=-1,0,0x20,0x7,1,1,0x77
+# Drive output pins:
+#     Pin 0.4: QSFP_RST_N=1
+#     Pin 0.5: QSFP_MODSEL_N=1
+#     Pin 0.6: QSFP_LPMODE=1
+#     Pin 1.3: SFP_TX_DISABLE_0=0
+#     Pin 1.7: SFP_TX_DISABLE_1=0
+BRD-CFG-TWSI-WRITE-2=-1,0,0x20,0x2,1,1,0x70
+BRD-CFG-TWSI-WRITE-3=-1,0,0x20,0x3,1,1,0x00
+
